@@ -483,6 +483,7 @@ The following extensions are migrated into MediaWiki 1.14:
 * (bug 16421) Made list=logevents's leuser accept user names with underscores
   instead of spaces
 * (bug 16516) Made rvsection=T-2 work
+* (bug 16526) Added usprop=canemail to list=users
 
 === Languages updated in 1.14 ===
 
